Test old handmade node api

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,12 @@
       label: 'Rust Crate Api',
       name: 'rust-crate-api',
       path: 'http://127.0.0.1:8080/solve'
-    }
+    },
+    {
+      label: 'Node Handmade Api',
+      name: 'node-handmade-api',
+      path: 'http://127.0.0.1:8125/solve'
+    },
   ];
   const initialSudokuLine = '...2...633....54.1..1..398........9....538....3........263..5..5.37....847...1...';
   const sudokuLineSelector = '#sudoku-line-input';
