Prevent request path resolving overhead over node handmade api

--- a/src/index.html
+++ b/src/index.html
@@ -57,21 +57,23 @@
   </div>
 </body>
 <script>
+  const initialSudokuLine = '...2...633....54.1..1..398........9....538....3........263..5..5.37....847...1...';
+  const buildPath = (item) => ({...item, path: item.pathBuilder(item.basePath, initialSudokuLine) })
   const apis = [
     {
       label: 'Rust Crate Api',
       name: 'rust-crate-api',
-      path: 'http://127.0.0.1:8080/solve',
+      basePath: 'http://127.0.0.1:8080/solve',
       pathBuilder: (path, line) => `${path}/${line}`
     },
     {
       label: 'Node Handmade Api',
       name: 'node-handmade-api',
-      path: 'http://127.0.0.1:8125/vetor-tabuleiro',
+      basePath: 'http://127.0.0.1:8125/vetor-tabuleiro',
       pathBuilder: (path, line) => `${path}?table=${line.split('').map(l => l==='.'? '0': l).join(',')}`,
     },
-  ];
-  const initialSudokuLine = '...2...633....54.1..1..398........9....538....3........263..5..5.37....847...1...';
+  ].map(buildPath);
+
   const sudokuLineSelector = '#sudoku-line-input';
   const getSudokuLine = () => document.querySelector(sudokuLineSelector)?.textContent
   const setSudokuLine = (newValue) => document.querySelector(sudokuLineSelector).textContent = newValue
@@ -86,13 +88,13 @@
     document.querySelector(durationCellSelector).textContent = time;
   }
 
-  const fetchResult = async ({path, pathBuilder}) => {
-    const result = await fetch(`${pathBuilder(path, getSudokuLine())}`).then(res => res.text())
+  const fetchResult = async ({path}) => {
+    const result = await fetch(path).then(res => res.text())
   }
 
-  const getResultRowHtml = ({label, name, path, msDuration}) => `
+  const getResultRowHtml = ({label, name, basePath, msDuration}) => `
     <td>${label}</td>
-    <td>${path}</td>
+    <td>${basePath}</td>
     <td id=${name}-duration>${msDuration || "-"}</td>
   `;
 
