--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,23 @@
   <title>Sudoku Benchmarker</title>
 </head>
 <style>
+  h1 {
+    margin-top: 0px;
+  }
+
+  .app {
+    margin: auto;
+    padding: 20px;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f9f9f9;
+    border: 1px solid #000;
+  }
+
   .results {
     width: 300px;
   }
@@ -35,25 +52,27 @@
   }
 </style>
 <body>
-  <h1>Sudoku Benchmarker</h1>
-  <div class="results">
-    <label for="sudoku-line-input">Sudoku Line:</label>
-    <textarea class="mb-1" id="sudoku-line-input"></textarea>
-    <label for="request-repeat">Request Repeat Number:</label>
-    <input class="mb-1" id="request-repeat" type="number">
-    <button class="run-button">Run Benchmarker</button>
-    <p>Results:</p>
-    <table id="results-table">
-      <thead>
-        <tr>
-          <th>API</th>
-          <th>Path</th>
-          <th>ms</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+  <div class="app">
+    <h1>Sudoku Benchmarker</h1>
+    <div class="results">
+      <label for="sudoku-line-input">Sudoku Line:</label>
+      <textarea class="mb-1" id="sudoku-line-input"></textarea>
+      <label for="request-repeat">Request Repeat Number:</label>
+      <input class="mb-1" id="request-repeat" type="number">
+      <button class="run-button">Run Benchmarker</button>
+      <p>Results:</p>
+      <table id="results-table">
+        <thead>
+          <tr>
+            <th>API</th>
+            <th>Path</th>
+            <th>ms</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
 </body>
 <script>
