Templating a sudoku client to test single apis correctness

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,11 @@
 </style>
 <body>
   <div class="app">
+    <header>
+      <a class="header-link" href="/.">Benchmarker</a>
+      <span class="header-link-separator"> - </span>
+      <a class="header-link" href="sudoku-client.html">Sudoku Client</a>
+    </header>
     <h1>Sudoku Benchmarker</h1>
     <div class="results">
       <label for="sudoku-line-input">Sudoku Line:</label>
